<resources>
    <string name="app_name">Ecom</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image">Product Image</string>
    <string name="product_details">Product Detials</string>
    <string name="addToCart">Add to Cart</string>
    <string name="price">Price</string>
    <string name="ratting">Rating</string>
    <string name="rating_count">Rating Count</string>
    <string name="choose_from">Choose from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cart">Cart</string>
    <string name="icon">icon</string>
    <string name="change_image">Change Image</string>
</resources>